--- a/.github/workflows/train_model.yml
+++ b/.github/workflows/train_model.yml
@@ -1,30 +1,41 @@
-name: Train & Convert Model
+name: CI – Train & Convert Model
+
 on:
+  workflow_dispatch:
   push:
     branches: [ main ]
-  workflow_dispatch:
+    paths:
+      - 'train/**'
 
 jobs:
   train:
+    name: Train & Convert
     runs-on: ubuntu-latest
+
     steps:
-    - uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-    - name: Setup Python
-      uses: actions/setup-python@v4
-      with: python-version: '3.10'
+      - name: Setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
 
-    - name: Install train deps
-      run: pip install -r train/requirements.txt
+      - name: Install training dependencies
+        run: pip install -r train/requirements.txt
 
-    - name: Run training
-      run: python train/train.py
+      - name: Run training script
+        env:
+          BINANCE_API_KEY: ${{ secrets.BINANCE_API_KEY }}
+          BINANCE_API_SECRET: ${{ secrets.BINANCE_API_SECRET }}
+          PROXY_URL: ${{ secrets.PROXY_URL }}
+        run: python train/train.py
 
-    - name: Upload artifacts
-      uses: actions/upload-artifact@v3
-      with:
-        name: model-files
-        path: |
-          model.keras
-          scaler.pkl
-          model.tflite
+      - name: Upload model artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: model-files
+          path: |
+            model.keras
+            scaler.pkl
+            model.tflite
