--- a/.github/workflows/ci_combined.yml
+++ b/.github/workflows/ci_combined.yml
@@ -1,4 +1,3 @@
-# .github/workflows/ci_combined.yml
 name: CI – Train, Export TFLite & Build APK
 
 on:
@@ -10,8 +9,6 @@ jobs:
   train:
     name: 🏋️‍♂️ Train & Export
     runs-on: ubuntu-latest
-    outputs:
-      artifact-name: model-files
 
     steps:
       - name: Checkout repository
@@ -32,7 +29,7 @@ jobs:
           PROXY_URL:          ${{ secrets.PROXY_URL }}
         run: python train/train.py
 
-      - name: Debug: List root directory
+      - name: Debug: List repo root
         run: |
           echo "=== Repo root contents ==="
           ls -la .
