--- a/.github/workflows/ci_combined.yml
+++ b/.github/workflows/ci_combined.yml
@@ -1,46 +1,45 @@
-# .github/workflows/ci_combined.yml
-name: CI – Train, Export TFLite & Build APK
+name: "CI – Train, Export TFLite & Build APK"
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
   workflow_dispatch:
 
 jobs:
   train:
-    name: 🏋️‍♂️ Train & Debug
+    name: "🏋️‍♂️ Train & Debug"
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: "Checkout repository"
         uses: actions/checkout@v3
 
-      - name: Setup Python
+      - name: "Setup Python"
         uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
+          python-version: "3.10"
 
-      - name: Install training dependencies
+      - name: "Install training dependencies"
         run: pip install -r train/requirements.txt
 
-      - name: Run training script
+      - name: "Run training script"
+        run: python train/train.py
         env:
           PROXY_URL: ${{ secrets.PROXY_URL }}
-        run: python train/train.py
 
-      - name: 'Debug: List repo root'
+      - name: "🚩 Debug: List repo root"
         run: |
           echo "=== Dateien im Repo-Root ==="
           ls -la .
 
-      - name: 'Debug: List train directory'
+      - name: "🚩 Debug: List train directory"
         run: |
           echo "=== Dateien im train/ Verzeichnis ==="
           ls -la train/
 
-      # ——————————————————————————————————————
-      # Temporär auskommentiert, damit der Debug durchläuft
-      # - name: Upload model artifacts
+      # Temporär auskommentiert, damit der Debug durchläuft:
+      # - name: "Upload model artifacts"
       #   uses: actions/upload-artifact@v3
       #   with:
       #     name: model-files
@@ -48,42 +47,41 @@ jobs:
       #       model.keras
       #       scaler.pkl
       #       model.tflite
-      # ——————————————————————————————————————
 
   build:
-    name: 📱 Build Flutter APK
+    name: "📱 Build Flutter APK"
     needs: train
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: "Checkout repository"
         uses: actions/checkout@v3
 
-      - name: Download model artifacts
+      - name: "Download model artifacts"
         uses: actions/download-artifact@v3
         with:
           name: model-files
           path: ./train_artifacts
 
-      - name: Copy TFLite into Flutter assets
+      - name: "Copy TFLite into Flutter assets"
         run: |
           mkdir -p flutter_app/assets
           cp train_artifacts/model.tflite flutter_app/assets/model.tflite
 
-      - name: Setup Flutter
+      - name: "Setup Flutter"
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.7.0'
+          flutter-version: "3.7.0"
 
-      - name: Install Flutter dependencies
+      - name: "Install Flutter dependencies"
         working-directory: flutter_app
         run: flutter pub get
 
-      - name: Build release APK
+      - name: "Build release APK"
         working-directory: flutter_app
         run: flutter build apk --release
 
-      - name: Upload APK artifact
+      - name: "Upload APK artifact"
         uses: actions/upload-artifact@v3
         with:
           name: crypto_signal_app.apk
