--- a/.github/workflows/ci_debug.yml
+++ b/.github/workflows/ci_debug.yml
@@ -1,4 +1,5 @@
-name: CI – Train & Convert Model
+# Datei: .github/workflows/ci_debug.yml
+name: CI – Train & Debug
 
 on:
   push:
@@ -10,6 +11,7 @@ on:
 jobs:
   train:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -19,19 +21,32 @@ jobs:
         with:
           python-version: '3.10'
 
-      - name: Install train deps
+      - name: Install training dependencies
         run: pip install -r train/requirements.txt
 
-      - name: Run training & conversion
+      - name: Run training script
         env:
           PROXY_URL: ${{ secrets.PROXY_URL }}
-        run: python train/train.py
+        run: |
+          python train/train.py
 
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          name: model-files
-          path: |
-            model.keras
-            scaler.pkl
-            model.tflite
+      - name: Convert to TFLite
+        run: python train/convert_to_tflite.py
+
+      - name: Debug: list workspace
+        run: |
+          echo "=== root ==="
+          ls -R .
+          echo "=== train dir ==="
+          ls -la train/
+          echo "=== files at root ==="
+          ls -la
+
+      #– name: Upload model artifacts  ← auskommentiert!
+      #–   uses: actions/upload-artifact@v3
+      #–   with:
+      #–     name: model-files
+      #–     path: |
+      #–       model.keras
+      #–       scaler.pkl
+      #–       model.tflite
