--- a/.github/workflows/ci_debug.yml
+++ b/.github/workflows/ci_debug.yml
@@ -1,4 +1,4 @@
-# Datei: .github/workflows/ci_debug.yml
+# .github/workflows/ci_debug.yml
 name: CI – Train & Debug
 
 on:
@@ -11,12 +11,11 @@ on:
 jobs:
   train:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Setup Python 3.10
+      - name: Setup Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
@@ -27,26 +26,16 @@ jobs:
       - name: Run training script
         env:
           PROXY_URL: ${{ secrets.PROXY_URL }}
-        run: |
-          python train/train.py
+        run: python train/train.py
 
       - name: Convert to TFLite
         run: python train/convert_to_tflite.py
 
       - name: Debug: list workspace
         run: |
-          echo "=== root ==="
+          echo "=== Project root ==="
           ls -R .
-          echo "=== train dir ==="
+          echo ""
+          echo "=== train/ directory ==="
           ls -la train/
-          echo "=== files at root ==="
-          ls -la
 
-      #– name: Upload model artifacts  ← auskommentiert!
-      #–   uses: actions/upload-artifact@v3
-      #–   with:
-      #–     name: model-files
-      #–     path: |
-      #–       model.keras
-      #–       scaler.pkl
-      #–       model.tflite
