--- a/.github/workflows/download_history_split.yml
+++ b/.github/workflows/download_history_split.yml
@@ -1,58 +1,56 @@
-name: Download 4yr Historical Data (Split)
+name: Download Historical Data (Split)
 
-# Manuelle Auslösung im Actions-Tab
+# manuell im Actions-Tab starten
 on:
   workflow_dispatch:
 
 jobs:
-  part1:
-    name: Download Years  –4 to –2
+  download-part1:
+    name: Download Years 4→2 ago
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Make script executable
+      - name: Make download script executable
         run: chmod +x download_data_range.sh
 
-      - name: Download first 2 years
+      - name: Download first 2 years (4→2)
         run: |
-          # from 4 years ago (inkl.) bis 2 years ago (inkl.)
           START=$(date -I -d "4 years ago")
           END=$(date -I -d "2 years ago")
-          ./download_data_range.sh part1 $START $END
+          ./download_data_range.sh part1 "$START" "$END"
 
-      - name: Zip part1
+      - name: Zip part1 folder
         run: zip -r part1_zips.zip historical/part1
 
-      - name: Upload part1 Artifact
+      - name: Upload artifact part1
         uses: actions/upload-artifact@v3
         with:
           name: historical-part1
           path: part1_zips.zip
 
-  part2:
-    name: Download Years –2 to now
-    needs: part1
+  download-part2:
+    name: Download Years 2→yesterday
+    needs: download-part1
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Make script executable
+      - name: Make download script executable
         run: chmod +x download_data_range.sh
 
-      - name: Download second 2 years
+      - name: Download second 2 years (2→yesterday)
         run: |
-          # from 2 years ago (incl.) until yesterday
           START=$(date -I -d "2 years ago")
           END=$(date -I -d "yesterday")
-          ./download_data_range.sh part2 $START $END
+          ./download_data_range.sh part2 "$START" "$END"
 
-      - name: Zip part2
+      - name: Zip part2 folder
         run: zip -r part2_zips.zip historical/part2
 
-      - name: Upload part2 Artifact
+      - name: Upload artifact part2
         uses: actions/upload-artifact@v3
         with:
           name: historical-part2
