--- a/.github/workflows/download_history.yml
+++ b/.github/workflows/download_history.yml
@@ -1,4 +1,4 @@
-name: Download 4yr Historical Data (Split)
+name: 📥 Download 4yr Historical Data (Split)
 
 on:
   workflow_dispatch:
@@ -19,8 +19,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Make download script executable
-        run: |
-          git update-index --chmod=+x train/download_data_range.sh
+        run: chmod +x train/download_data_range.sh
 
       - name: Compute date range for ${{ matrix.part }}
         shell: bash
