--- a/.github/workflows/download_history.yml
+++ b/.github/workflows/download_history.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   download:
-    name: 🔄 ${{ matrix.symbol }}｜${{ matrix.interval }}｜${{ matrix.part }}
+    name: 📦 ${{ matrix.symbol }}｜${{ matrix.interval }}｜${{ matrix.part }}
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -16,21 +16,21 @@ jobs:
         part:     [part1, part2]
 
     steps:
-      - name: 📥 Checkout repository
+      - name: 🔄 Checkout repository
         uses: actions/checkout@v3
 
-      - name: 🔧 Make download script executable
-        run: chmod +x download_data_range.sh
+      - name: ⚙️  Skript ausführbar machen
+        run: chmod +x train/download_data_range.sh
 
-      - name: 📅 Compute date range for ${{ matrix.part }}
+      - name: 📅 Berechne Datumsspanne für ${{ matrix.part }}
         shell: bash
         run: |
           if [ "${{ matrix.part }}" = "part1" ]; then
             START=$(date -I -d "4 years ago")
-            END  =$(date -I -d "2 years ago")
+            END=$(date -I -d "2 years ago")
           else
             START=$(date -I -d "2 years ago")
-            END  =$(date -I -d "yesterday")
+            END=$(date -I -d "yesterday")
           fi
           echo "START=$START" >> $GITHUB_ENV
           echo "END=$END"     >> $GITHUB_ENV
@@ -39,27 +39,21 @@ jobs:
         run: |
           OUT=historical/${{ matrix.symbol }}/${{ matrix.interval }}/${{ matrix.part }}
           mkdir -p "$OUT"
-          ./download_data_range.sh \
+          train/download_data_range.sh \
             "${{ matrix.symbol }}" \
             "${{ matrix.interval }}" \
             "$START" "$END" \
             "$OUT"
 
-      - name: 📦 Zip downloaded files
+      - name: 📦 Zip alle .zip-Dateien
         run: |
           mkdir -p artifacts
           ZIP=artifacts/hist-${{ matrix.symbol }}-${{ matrix.interval }}-${{ matrix.part }}.zip
           DIR=historical/${{ matrix.symbol }}/${{ matrix.interval }}/${{ matrix.part }}
-          # Nur zippen, wenn Dateien existieren
-          if ls "$DIR"/*.zip 1> /dev/null 2>&1; then
-            echo "➤ Zipping $DIR → $ZIP"
-            zip -j "$ZIP" "$DIR"/*.zip
-          else
-            echo "⚠️  No files found in $DIR – skipping zip"
-          fi
+          echo "→ Zipping $DIR/*.zip → $ZIP"
+          zip -j "$ZIP" "$DIR"/*.zip
 
-      - name: 🚀 Upload history artifact
-        if: always() # lädt nur, wenn ZIP existiert
+      - name: 🚀 Upload Artifact
         uses: actions/upload-artifact@v4
         with:
           name: historical-${{ matrix.symbol }}-${{ matrix.interval }}-${{ matrix.part }}
